[gd_scene load_steps=8 format=3 uid="uid://b52dtpp3r6mj7"]

[ext_resource type="Script" uid="uid://dingpu6yvx1uo" path="res://addons/michi/scripts/ui/RoadToolbar.gd" id="1_aqk6j"]

[sub_resource type="Image" id="Image_aqk6j"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 92, 178, 255, 69, 94, 177, 254, 223, 98, 179, 254, 228, 153, 198, 241, 125, 225, 225, 225, 85, 223, 223, 223, 79, 225, 225, 225, 68, 226, 226, 226, 52, 247, 247, 247, 92, 255, 255, 255, 223, 255, 255, 255, 221, 255, 255, 255, 68, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 94, 178, 255, 222, 95, 178, 255, 255, 95, 178, 255, 255, 103, 181, 254, 233, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 253, 253, 253, 235, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 98, 179, 254, 229, 95, 178, 255, 255, 95, 178, 255, 255, 96, 179, 255, 220, 224, 224, 224, 16, 228, 228, 228, 28, 221, 221, 221, 45, 226, 226, 226, 61, 254, 254, 254, 232, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 153, 198, 241, 125, 102, 180, 253, 234, 96, 177, 254, 223, 94, 177, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 85, 225, 225, 225, 102, 224, 224, 224, 16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 79, 225, 225, 225, 102, 228, 228, 228, 28, 0, 0, 0, 0, 0, 0, 0, 0, 94, 178, 255, 152, 95, 178, 255, 99, 102, 179, 255, 10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 67, 225, 225, 225, 102, 221, 221, 221, 45, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 99, 95, 178, 255, 255, 95, 177, 255, 239, 95, 178, 255, 145, 96, 179, 255, 40, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 226, 226, 226, 52, 225, 225, 225, 102, 226, 226, 226, 61, 0, 0, 0, 0, 0, 0, 0, 0, 102, 179, 255, 10, 95, 177, 255, 239, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 191, 95, 178, 255, 86, 102, 204, 255, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 247, 247, 247, 92, 253, 253, 253, 235, 254, 254, 254, 230, 255, 255, 255, 66, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 145, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 255, 94, 178, 255, 201, 93, 179, 255, 90, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 223, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 218, 0, 0, 0, 0, 0, 0, 0, 0, 96, 179, 255, 40, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 255, 95, 179, 255, 140, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 222, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 191, 95, 178, 255, 255, 95, 179, 255, 140, 95, 178, 255, 255, 94, 177, 255, 114, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 86, 94, 178, 255, 201, 0, 0, 0, 0, 94, 177, 255, 114, 94, 178, 255, 166, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 102, 204, 255, 5, 93, 179, 255, 90, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_8fmp1"]
image = SubResource("Image_aqk6j")

[sub_resource type="Image" id="Image_8fmp1"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 244, 129, 69, 114, 241, 127, 223, 117, 241, 131, 228, 163, 235, 172, 125, 225, 225, 225, 85, 223, 223, 223, 79, 225, 225, 225, 68, 226, 226, 226, 52, 247, 247, 247, 92, 255, 255, 255, 223, 255, 255, 255, 221, 255, 255, 255, 68, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 222, 115, 242, 128, 255, 115, 242, 128, 255, 121, 241, 135, 233, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 253, 253, 253, 235, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 118, 241, 130, 229, 115, 242, 128, 255, 115, 242, 128, 255, 116, 243, 130, 220, 224, 224, 224, 16, 228, 228, 228, 28, 221, 221, 221, 45, 226, 226, 226, 61, 254, 254, 254, 232, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 163, 235, 172, 125, 121, 240, 133, 234, 115, 241, 128, 223, 114, 244, 129, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 85, 225, 225, 225, 102, 224, 224, 224, 16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 79, 225, 225, 225, 102, 228, 228, 228, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 67, 225, 225, 225, 102, 221, 221, 221, 45, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 226, 226, 226, 52, 225, 225, 225, 102, 226, 226, 226, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 247, 247, 247, 92, 253, 253, 253, 235, 254, 254, 254, 230, 255, 255, 255, 66, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 223, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 218, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 222, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_qkr4r"]
image = SubResource("Image_8fmp1")

[sub_resource type="Image" id="Image_wkwdd"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 118, 107, 69, 254, 119, 106, 223, 254, 123, 110, 228, 241, 167, 159, 125, 225, 225, 225, 85, 223, 223, 223, 79, 225, 225, 225, 68, 226, 226, 226, 52, 247, 247, 247, 92, 255, 255, 255, 223, 255, 255, 255, 221, 255, 255, 255, 68, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 119, 107, 222, 255, 120, 107, 255, 255, 120, 107, 255, 254, 127, 114, 233, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 225, 225, 225, 102, 253, 253, 253, 235, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 254, 122, 110, 229, 255, 120, 107, 255, 255, 120, 107, 255, 255, 122, 109, 220, 224, 224, 224, 16, 228, 228, 228, 28, 221, 221, 221, 45, 226, 226, 226, 61, 254, 254, 254, 232, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 241, 167, 159, 125, 253, 125, 113, 234, 254, 120, 107, 223, 255, 118, 106, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 85, 225, 225, 225, 102, 224, 224, 224, 16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 79, 225, 225, 225, 102, 228, 228, 228, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 118, 104, 54, 255, 116, 104, 22, 0, 0, 0, 0, 0, 0, 0, 0, 255, 117, 106, 24, 255, 120, 105, 51, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 67, 225, 225, 225, 102, 221, 221, 221, 45, 0, 0, 0, 0, 0, 0, 0, 0, 255, 118, 104, 54, 255, 119, 106, 242, 255, 120, 106, 213, 255, 116, 104, 22, 255, 122, 111, 23, 255, 119, 106, 214, 255, 119, 106, 240, 255, 120, 105, 51, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 226, 226, 226, 52, 225, 225, 225, 102, 226, 226, 226, 61, 0, 0, 0, 0, 0, 0, 0, 0, 255, 116, 104, 22, 255, 120, 106, 213, 255, 120, 107, 255, 255, 120, 106, 213, 255, 120, 106, 213, 255, 120, 107, 255, 255, 119, 107, 210, 255, 115, 102, 20, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 247, 247, 247, 92, 253, 253, 253, 235, 254, 254, 254, 230, 255, 255, 255, 66, 0, 0, 0, 0, 0, 0, 0, 0, 255, 116, 104, 22, 255, 120, 106, 213, 255, 120, 107, 255, 255, 120, 107, 255, 255, 119, 107, 210, 255, 115, 102, 20, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 223, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 218, 0, 0, 0, 0, 0, 0, 0, 0, 255, 122, 111, 23, 255, 120, 106, 213, 255, 120, 107, 255, 255, 120, 107, 255, 255, 120, 106, 211, 255, 121, 109, 21, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 222, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 217, 0, 0, 0, 0, 255, 117, 106, 24, 255, 119, 106, 214, 255, 120, 107, 255, 255, 119, 107, 210, 255, 120, 106, 211, 255, 120, 107, 255, 255, 119, 107, 212, 255, 116, 104, 22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 68, 255, 255, 255, 220, 255, 255, 255, 220, 255, 255, 255, 65, 0, 0, 0, 0, 255, 120, 105, 51, 255, 119, 106, 240, 255, 119, 107, 210, 255, 115, 102, 20, 255, 121, 109, 21, 255, 119, 107, 212, 255, 119, 107, 239, 255, 120, 104, 49, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 120, 105, 51, 255, 115, 102, 20, 0, 0, 0, 0, 0, 0, 0, 0, 255, 116, 104, 22, 255, 120, 104, 49, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_kfuqi"]
image = SubResource("Image_wkwdd")

[node name="Toolbar" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_aqk6j")

[node name="Select" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Fix RoadSegment"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = SubResource("ImageTexture_8fmp1")

[node name="Add" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Add RoadPoint"
theme_type_variation = &"FlatButton"
toggle_mode = true
icon = SubResource("ImageTexture_qkr4r")

[node name="Remove" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Remove RoadPoint"
theme_type_variation = &"FlatButton"
toggle_mode = true
icon = SubResource("ImageTexture_kfuqi")

[node name="Menu" type="MenuButton" parent="."]
layout_mode = 2
text = "Menu"
item_count = 1
popup/item_0/text = "Fix road connection"
popup/item_0/id = 0

[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
